# TUFSeg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
resources/alignment/: featurepoints_RGB.csv  featurepoints_TIR.csv  homography_matrix_3750x3000.npz  homography_matrix_640x512.npz
resources/calibration/: calibration_data.npz
scripts/: configuration.py
scripts/registration/: README.md  __init__.py  merging.py  register_RGB_TIR.py
scripts/segm_models/: evaluate_UNet.py  infer_UNet.py  train_UNet.py
scripts/setup/: README.md  generate_segm_masks.py  setup.sh  train_test_split.py
src/tufseg/registration/: alignment.py  register_RGB_TIR.py  undistortion.py
src/tufseg/segm_models/: README.md  evaluate_UNet.py  infer_UNet.py  train_UNet.py
src/tufseg/setup/: generate_segm_masks.py  train_test_split.py
tests/: conftest.py  test_cli_modules.py  test_run.py
tufseg/scripts/: configuration.py
tufseg/scripts/registration/: README.md  alignment.py  generate_dirtree.py  merging.py  register_RGB_TIR.py  undistortion.py
tufseg/scripts/segm_models/: README.md  _utils.py  evaluate_UNet.py  infer_UNet.py  train.sh  train_UNet.py
tufseg/scripts/setup/: README.md  generate_segm_masks.py  train_test_split.py
