[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TUFSeg"
description = "Thermal Urban Feature Segmentation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Elena Vollmer", email = "elena.vollmer@kit.edu" },
    { name = "Leon Klug" },
    { name = "James Kahn" },
]
classifiers = [
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD-3-Clause License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Image Recognition',
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/emvollmer/TUFSeg"
"Bug Tracker" = "https://github.com/emvollmer/TUFSeg/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
env = []

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tufseg" = ["resources/*"]
